# Trabalho-de-Tecnologias-Emergentes

./: README.md  database.py  main.py  models.py  pyproject.toml
docs/: api.md  arquitetura.md  banco_de_dados.md  fluxo.md  manual.md  requisitos.md
static/: style.css
templates/: base.html  form.html  lista.html  previewFinal.html
