[project]
name = "trabalho-de-tec-emergentes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.138.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "psycopg2>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
]

[tool.taskipy.tasks]
run = 'fastapi dev main.py'
lint = 'ruff check .'
format = 'ruff format .'

[dependency-groups]
dev = [
    "ruff>=0.15.20",
    "taskipy>=1.14.1",
]